`chore`: removing and renaming some packages